# Viridis

./: CHANGELOG.md  README.md
v1/: .env.local  .gitignore  60k_results.txt  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  find_limit.py  key.txt  limit_results.txt  prometheus.yml  pyproject.toml  realistic_results.txt  seed_db.py  seed_k6_keys.py  split_prs.sh  temp_k6.js
v1/.github/workflows/: ci.yml  deploy.yml  pr-checks.yml
v1/alembic/: env.py
v1/alembic/versions/: 9b3c7b334b7c_add_api_key_id_index.py  dbb9182c155e_add_waf_feature_windows_table.py
v1/app/: config.py  main.py
v1/app/api/: admin.py  audit_export.py  demo.py  enforce.py  limits.py  metrics.py  quota.py  waf_admin.py
v1/app/core/: circuit_breaker.py  concurrency.py  decision.py  metrics.py  operational_mode.py  policy_cache.py  redis.py  sliding_window.py  token_bucket.py
v1/app/db/: session.py
v1/app/middleware/: jwt_auth.py
v1/app/ml/: consumer.py  feature_aggregator.py  scorer.py  trainer.py
v1/app/models/: __init__.py  db.py
v1/app/scripts/: sliding_window.lua  token_bucket.lua
v1/app/services/: alert_manager.py  audit.py  audit_consumer.py  audit_export.py  key_service.py  override_service.py  payload_scanner.py
v1/deploy/: azure-container-app.bicep  docker-compose.prod.yml
v1/k6/: 30k_vus.js  60k_vus.js  max_rps.js  realistic.js  smoke.js  stress.js
v1/scratch/: git_rewrite.py
v1/tests/: conftest.py  test_api.py  test_core_engine.py  test_ml_pipeline.py  test_payload_scanner.py
v1/viridis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+19 files in other folders)
