[project]
name = "viridis"
version = "0.1.0"
description = "API Admission & Abuse Governance Engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "redis==5.0.4",
    "base58==2.1.1",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["app"]
